Fix layout error on Firefox

--- a/src/app/settings/settings.component.css
+++ b/src/app/settings/settings.component.css
@@ -1,5 +1,6 @@
 .settings{
-  margin-top: -300px;
+  position: relative;
+  top: -300px;
   z-index: 4;
 }
 
